--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hi d Page</title>
+    <title>Hi Page</title>
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8b87f2d7939ca8b3c5fc50dfd/dc6fdf7e4547abd88c64fba19.js");</script>
   </head>
   <body>
-    <h1>Hi</h1>
+    <h1>His</h1>
   </body>
 </html>
